# npcs-in-css

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  command.cpp  launch.vs.json  sign_func.cpp  sign_func.h
.github/workflows/: ci.yml
CEntity/: CEntity.cpp  CEntityManager.cpp
CEntity/Class/: CAnimating.cpp  CPlayer.cpp
CEntity/modify/: networkvar.h  shareddefs.h
Custom/: func_tank.cpp  vehicle_jeep.cpp  weapon_replace.cpp
Monster/: npc_headcrab.cpp  npc_stalker.cpp  npc_turret_ceiling.cpp  npc_turret_floor.cpp
_game_server_files/addons/gamedata/monster/: monster.cstrike.games.txt
_game_server_files/gamedata/monster/: monster.cstrike.games.txt
_game_server_files/scripts/sm_monster/: game_sounds_BaseNpc.txt  game_sounds_items.txt  game_sounds_weapons.txt  npc_sounds_fastzombie.txt  npc_sounds_poisonzombie.txt  npc_sounds_zombie.txt
sdk/: vtablehelper.h
